# tir

./: .gitignore  BUILD.gn  BUILDCONFIG.gn  configure.py
gn/config/: BUILD.gn
gn/toolchains/: BUILD.gn
src/: array.h  core.cpp  core.h  elf.h  file.h  hash.h  hash_table.h  lexer.cpp  lexer.h  linux_core.cpp  linux_file.cpp  linux_main.cpp  linux_memory.cpp  linux_process.cpp  linux_thread.cpp  memory.cpp  memory.h  platform.h  process.cpp  process.h  string.cpp  string.h  thread.h  tir.cpp  win32_core.cpp  win32_core.h  win32_file.cpp  win32_gdi32.h  win32_lite.h  win32_main.cpp  win32_memory.cpp  win32_process.cpp  win32_shlwapi.h  win32_thread.cpp  win32_user32.h
test/: binop.t  extern.c  int.t  proc.t  ret.t  ret2.t  ret2p2.t  var.t
tools/: exe.py
tools/gh/: BUILD.gn  gh.cpp
